force-app/main/default/objects/Zoom_Meeting_Map__c/Zoom_Meeting_Map__c.object-meta.xml
<CustomObject>
    <label>Zoom Meeting Map</label>
    <nameField>
        <label>Zoom Meeting Map</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Meeting Map</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>