force-app/main/default/objects/Zoom_Meeting_Map__c/fields/Default_Time_Entry_Type__c.field-meta.xml
<CustomField>
    <fullName>Default_Time_Entry_Type__c</fullName>
    <description>Categorizes time entries.</description>
    <inlineHelpText>Default time entry classification.</inlineHelpText>
    <label>Default Time Entry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adhoc - Platform Configuration</fullName>
            </value>
            <value>
                <fullName>Adhoc - Development</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>Bug Fix</fullName>
            </value>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Feature Request - Development</fullName>
            </value>
            <value>
                <fullName>Feature Request - Platform Configuration</fullName>
            </value>
            <value>
                <fullName>Jira Support</fullName>
            </value>
            <value>
                <fullName>Meetings</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Project Management</fullName>
            </value>
            <value>
                <fullName>Reports/Dashboards</fullName>
            </value>
            <value>
                <fullName>Test Scripts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>