force-app/main/default/objects/Zoom_Meeting_Map__c/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls usage.</description>
    <inlineHelpText>Indicates mapping is active.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>