force-app/main/default/objects/Zoom_Meeting_Map__c/fields/Meeting_Name__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Name__c</fullName>
    <description>Primary matching value.</description>
    <inlineHelpText>Zoom meeting title used for mapping.</inlineHelpText>
    <label>Meeting Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>