force-app/main/default/objects/Zoom_Meeting_Map__c/fields/Normalized_Meeting_Name__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Meeting_Name__c</fullName>
    <description>Used for consistent matching.</description>
    <inlineHelpText>Standardized meeting title.</inlineHelpText>
    <label>Normalized Meeting Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>