force-app/main/default/objects/Zoom_Meeting_Map__c/fields/Notes_Template__c.field-meta.xml
<CustomField>
    <fullName>Notes_Template__c</fullName>
    <description>Controls notes formatting.</description>
    <inlineHelpText>Template for time entry notes.</inlineHelpText>
    <label>Notes Template</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>