force-app/main/default/objects/Zoom_Meeting_Map__c/fields/Override_Debrief_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Override_Debrief_Minutes__c</fullName>
    <description>Meeting-specific adjustment.</description>
    <inlineHelpText>Overrides default debrief time.</inlineHelpText>
    <label>Override Debrief Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>