force-app/main/default/objects/Zoom_Meeting_Map__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Defines billing destination.</description>
    <inlineHelpText>Target project for time entries.</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Zoom_Meeting_Map</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>