force-app/main/default/objects/Zoom_Meeting_Map__c/fields/Require_Exact_Title__c.field-meta.xml
<CustomField>
    <fullName>Require_Exact_Title__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents loose matching.</description>
    <inlineHelpText>Requires exact title match.</inlineHelpText>
    <label>Require Exact Title</label>
    <type>Checkbox</type>
</CustomField>